feat: implement roles and restricted edit permissions
